--- a/notebook/03_langchain_llms.ipynb
+++ b/notebook/03_langchain_llms.ipynb
@@ -32,13 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bb02c0591ed88c41",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T05:03:44.662703147Z",
-     "start_time": "2024-03-06T05:03:44.617869219Z"
+     "end_time": "2024-03-07T01:38:07.354365900Z",
+     "start_time": "2024-03-07T01:38:07.334878900Z"
     }
    },
    "outputs": [
@@ -66,13 +66,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "cd8ce54d1b2c640d",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T05:03:47.529949715Z",
-     "start_time": "2024-03-06T05:03:47.520585863Z"
+     "end_time": "2024-03-07T01:38:09.413004Z",
+     "start_time": "2024-03-07T01:38:09.393638700Z"
     }
    },
    "outputs": [
@@ -85,8 +85,46 @@
     }
    ],
    "source": [
-    "%env GOOGLE_API_ENDPOINT=you-api-endpoit"
+    "%env GOOGLE_API_ENDPOINT=you-api-endpoint"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "打印配置是否已生效"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "12dbacef9c9d3247"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AIzaSyAfpe3G_tTSVl0WpSuaX0_bHry3tkrjydQ\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "print(\n",
+    "    os.environ['GOOGLE_API_KEY']\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-07T01:40:34.808493300Z",
+     "start_time": "2024-03-07T01:40:34.792593600Z"
+    }
+   },
+   "id": "a3fa462a1793c91"
   },
   {
    "cell_type": "markdown",
@@ -118,7 +156,6 @@
     }
    ],
    "source": [
-    "import os\n",
     "from langchain_google_genai import GoogleGenerativeAI\n",
     "\n",
     "llm = GoogleGenerativeAI(model=\"gemini-pro\", google_api_key=os.environ['GOOGLE_API_KEY'], transport=\"rest\",\n",
@@ -360,13 +397,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content=' A snow-capped mountain at sunset.'\n"
+      "content=' The image shows a replica of the Eiffel Tower in Paris, France. It is located in Window of the World, a theme park in Shenzhen, China.'\n"
      ]
     }
    ],
@@ -383,7 +420,7 @@
     "            \"type\": \"text\",\n",
     "            \"text\": \"What's in this image?\",\n",
     "        },  # You can optionally provide text parts\n",
-    "        {\"type\": \"image_url\", \"image_url\": \"https://picsum.photos/seed/picsum/200/300\"},\n",
+    "        {\"type\": \"image_url\", \"image_url\": \"https://youimg1.c-ctrip.com/target/100r10000000pycel4E0E.jpg\"},\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -394,8 +431,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T05:04:46.517602140Z",
-     "start_time": "2024-03-06T05:04:38.118123989Z"
+     "end_time": "2024-03-07T01:40:56.444834700Z",
+     "start_time": "2024-03-07T01:40:42.876805400Z"
     }
    },
    "id": "b58f91a1e8d7c62c"
