--- a/notebook/02_langchain_chains.ipynb
+++ b/notebook/02_langchain_chains.ipynb
@@ -192,19 +192,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "from langchain.globals import set_verbose, set_debug\n",
     "\n",
     "set_verbose(True)\n",
-    "set_debug(False)"
+    "set_debug(True)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T09:01:32.837116800Z",
-     "start_time": "2024-01-27T09:01:32.819587200Z"
+     "end_time": "2024-03-08T08:51:38.435181066Z",
+     "start_time": "2024-03-08T08:51:38.386906887Z"
     }
    },
    "id": "e4813a659852fbc9"
@@ -212,7 +212,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "加入 PythonREPLTool 工具，用于数学计算，构建新的链。"
+    "加入 PythonREPL 工具，用于数学计算，构建新的链。使用 Google 的 Gemini 模型来演示"
    ],
    "metadata": {
     "collapsed": false
@@ -220,8 +220,206 @@
    "id": "5a3406ef555886dd"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "配置 api_key"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ec47c3518b5c66e2"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: GOOGLE_API_KEY=AIzaSyAfpe3G_tTSVl0WpSuaX0_bHry3tkrjydQ\n"
+     ]
+    }
+   ],
+   "source": [
+    "%env GOOGLE_API_KEY=you-api-key"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-08T08:48:21.624002782Z",
+     "start_time": "2024-03-08T08:48:21.599281136Z"
+    }
+   },
+   "id": "d074ce7bd38ab58c"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "如果无法访问 api，可以配置 endpoint"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "156c0f3cee345e4b"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: GOOGLE_API_ENDPOINT=ai.goi.oowan.net\n"
+     ]
+    }
+   ],
+   "source": [
+    "%env GOOGLE_API_ENDPOINT=you-api-endpoint"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-08T08:48:23.890194359Z",
+     "start_time": "2024-03-08T08:48:23.860103420Z"
+    }
+   },
+   "id": "352f8c4cc53fa506"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "引入需要的组件库"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2444e3bddec6f2f0"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.prompts import (\n",
+    "    ChatPromptTemplate,\n",
+    ")\n",
+    "from langchain_experimental.utilities import PythonREPL"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-08T08:48:27.725521287Z",
+     "start_time": "2024-03-08T08:48:26.640470445Z"
+    }
+   },
+   "id": "f8755e1678a6f81e"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "配置 prompt 模版"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "df0ed4295d732693"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "template = \"\"\"Write some python code to solve the user's problem. \n",
+    "\n",
+    "Return only python code in Markdown format, e.g.:\n",
+    "\n",
+    "```python\n",
+    "....\n",
+    "```\"\"\"\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages([(\"system\", template), (\"human\", \"{input}\")])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-08T08:48:29.970479157Z",
+     "start_time": "2024-03-08T08:48:29.948869896Z"
+    }
+   },
+   "id": "ea99664a0b49e3b8"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "配置 llm 模型"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "26f0ca4b9a2b728c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "llm = ChatGoogleGenerativeAI(model=\"gemini-pro\", temperature=0, google_api_key=os.environ['GOOGLE_API_KEY'], transport=\"rest\", client_options={\"api_endpoint\": os.environ['GOOGLE_API_ENDPOINT']}, convert_system_message_to_human=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-08T08:49:53.292798489Z",
+     "start_time": "2024-03-08T08:49:53.244606876Z"
+    }
+   },
+   "id": "eb38db45b622d767"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "定义一个格式化的函数，用于提取输出的文本"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6b024af1019921ad"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "def _sanitize_output(text: str):\n",
+    "    _, after = text.split(\"```python\")\n",
+    "    return after.split(\"```\")[0]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-08T08:48:36.253384684Z",
+     "start_time": "2024-03-08T08:48:36.226700648Z"
+    }
+   },
+   "id": "219fdae50c138a63"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "构建 chain 链，并执行"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "707db0efdd5e6258"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -229,56 +427,68 @@
      "text": [
       "\u001B[32;1m\u001B[1;3m[chain/start]\u001B[0m \u001B[1m[1:chain:RunnableSequence] Entering Chain run with input:\n",
       "\u001B[0m{\n",
-      "  \"query\": \"What is 1 plus 1?\"\n",
+      "  \"input\": \"whats 2 plus 2\"\n",
       "}\n",
       "\u001B[32;1m\u001B[1;3m[chain/start]\u001B[0m \u001B[1m[1:chain:RunnableSequence > 2:prompt:ChatPromptTemplate] Entering Prompt run with input:\n",
       "\u001B[0m{\n",
-      "  \"query\": \"What is 1 plus 1?\"\n",
+      "  \"input\": \"whats 2 plus 2\"\n",
       "}\n",
-      "\u001B[36;1m\u001B[1;3m[chain/end]\u001B[0m \u001B[1m[1:chain:RunnableSequence > 2:prompt:ChatPromptTemplate] [0ms] Exiting Prompt run with output:\n",
-      "\u001B[0m{\n",
-      "  \"lc\": 1,\n",
-      "  \"type\": \"constructor\",\n",
-      "  \"id\": [\n",
-      "    \"langchain\",\n",
-      "    \"prompts\",\n",
-      "    \"chat\",\n",
-      "    \"ChatPromptValue\"\n",
-      "  ],\n",
-      "  \"kwargs\": {\n",
-      "    \"messages\": [\n",
-      "      {\n",
-      "        \"lc\": 1,\n",
-      "        \"type\": \"constructor\",\n",
-      "        \"id\": [\n",
-      "          \"langchain\",\n",
-      "          \"schema\",\n",
-      "          \"messages\",\n",
-      "          \"HumanMessage\"\n",
-      "        ],\n",
-      "        \"kwargs\": {\n",
-      "          \"content\": \"tell me a result about What is 1 plus 1?\",\n",
-      "          \"additional_kwargs\": {}\n",
-      "        }\n",
-      "      }\n",
-      "    ]\n",
-      "  }\n",
-      "}\n",
-      "\u001B[32;1m\u001B[1;3m[llm/start]\u001B[0m \u001B[1m[1:chain:RunnableSequence > 3:llm:ChatOpenAI] Entering LLM run with input:\n",
+      "\u001B[36;1m\u001B[1;3m[chain/end]\u001B[0m \u001B[1m[1:chain:RunnableSequence > 2:prompt:ChatPromptTemplate] [1ms] Exiting Prompt run with output:\n",
+      "\u001B[0m[outputs]\n",
+      "\u001B[32;1m\u001B[1;3m[llm/start]\u001B[0m \u001B[1m[1:chain:RunnableSequence > 3:llm:ChatGoogleGenerativeAI] Entering LLM run with input:\n",
       "\u001B[0m{\n",
       "  \"prompts\": [\n",
-      "    \"Human: tell me a result about What is 1 plus 1?\"\n",
+      "    \"System: Write some python code to solve the user's problem. \\n\\nReturn only python code in Markdown format, e.g.:\\n\\n```python\\n....\\n```\\nHuman: whats 2 plus 2\"\n",
       "  ]\n",
-      "}\n",
-      "\u001B[36;1m\u001B[1;3m[llm/end]\u001B[0m \u001B[1m[1:chain:RunnableSequence > 3:llm:ChatOpenAI] [1.04s] Exiting LLM run with output:\n",
+      "}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Retrying langchain_google_genai.chat_models._chat_with_retry.<locals>._chat_with_retry in 2.0 seconds as it raised InternalServerError: 500 POST https://ai.goi.oowan.net/v1beta/models/gemini-pro:generateContent?%24alt=json%3Benum-encoding%3Dint: An internal error has occurred. Please retry or report in https://developers.generativeai.google/guide/troubleshooting.\n",
+      "Retrying langchain_google_genai.chat_models._chat_with_retry.<locals>._chat_with_retry in 4.0 seconds as it raised InternalServerError: 500 POST https://ai.goi.oowan.net/v1beta/models/gemini-pro:generateContent?%24alt=json%3Benum-encoding%3Dint: An internal error has occurred. Please retry or report in https://developers.generativeai.google/guide/troubleshooting.\n",
+      "Retrying langchain_google_genai.chat_models._chat_with_retry.<locals>._chat_with_retry in 8.0 seconds as it raised GatewayTimeout: 504 POST https://ai.goi.oowan.net/v1beta/models/gemini-pro:generateContent?%24alt=json%3Benum-encoding%3Dint: An error occurred with your deployment\n",
+      "\n",
+      "EDGE_FUNCTION_INVOCATION_TIMEOUT\n",
+      ".\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[36;1m\u001B[1;3m[llm/end]\u001B[0m \u001B[1m[1:chain:RunnableSequence > 3:llm:ChatGoogleGenerativeAI] [41.91s] Exiting LLM run with output:\n",
       "\u001B[0m{\n",
       "  \"generations\": [\n",
       "    [\n",
       "      {\n",
-      "        \"text\": \"The result of 1 plus 1 is 2.\",\n",
+      "        \"text\": \"```python\\nprint(2 + 2)\\n```\",\n",
       "        \"generation_info\": {\n",
-      "          \"finish_reason\": \"stop\",\n",
-      "          \"logprobs\": null\n",
+      "          \"finish_reason\": \"STOP\",\n",
+      "          \"safety_ratings\": [\n",
+      "            {\n",
+      "              \"category\": \"HARM_CATEGORY_SEXUALLY_EXPLICIT\",\n",
+      "              \"probability\": \"NEGLIGIBLE\",\n",
+      "              \"blocked\": false\n",
+      "            },\n",
+      "            {\n",
+      "              \"category\": \"HARM_CATEGORY_HATE_SPEECH\",\n",
+      "              \"probability\": \"NEGLIGIBLE\",\n",
+      "              \"blocked\": false\n",
+      "            },\n",
+      "            {\n",
+      "              \"category\": \"HARM_CATEGORY_HARASSMENT\",\n",
+      "              \"probability\": \"NEGLIGIBLE\",\n",
+      "              \"blocked\": false\n",
+      "            },\n",
+      "            {\n",
+      "              \"category\": \"HARM_CATEGORY_DANGEROUS_CONTENT\",\n",
+      "              \"probability\": \"NEGLIGIBLE\",\n",
+      "              \"blocked\": false\n",
+      "            }\n",
+      "          ]\n",
       "        },\n",
       "        \"type\": \"ChatGeneration\",\n",
       "        \"message\": {\n",
@@ -291,7 +501,7 @@
       "            \"AIMessage\"\n",
       "          ],\n",
       "          \"kwargs\": {\n",
-      "            \"content\": \"The result of 1 plus 1 is 2.\",\n",
+      "            \"content\": \"```python\\nprint(2 + 2)\\n```\",\n",
       "            \"additional_kwargs\": {}\n",
       "          }\n",
       "        }\n",
@@ -299,63 +509,84 @@
       "    ]\n",
       "  ],\n",
       "  \"llm_output\": {\n",
-      "    \"token_usage\": {\n",
-      "      \"completion_tokens\": 12,\n",
-      "      \"prompt_tokens\": 20,\n",
-      "      \"total_tokens\": 32\n",
-      "    },\n",
-      "    \"model_name\": \"gpt-3.5-turbo\",\n",
-      "    \"system_fingerprint\": null\n",
+      "    \"prompt_feedback\": {\n",
+      "      \"safety_ratings\": [\n",
+      "        {\n",
+      "          \"category\": 9,\n",
+      "          \"probability\": 1,\n",
+      "          \"blocked\": false\n",
+      "        },\n",
+      "        {\n",
+      "          \"category\": 8,\n",
+      "          \"probability\": 1,\n",
+      "          \"blocked\": false\n",
+      "        },\n",
+      "        {\n",
+      "          \"category\": 7,\n",
+      "          \"probability\": 1,\n",
+      "          \"blocked\": false\n",
+      "        },\n",
+      "        {\n",
+      "          \"category\": 10,\n",
+      "          \"probability\": 1,\n",
+      "          \"blocked\": false\n",
+      "        }\n",
+      "      ],\n",
+      "      \"block_reason\": 0\n",
+      "    }\n",
       "  },\n",
       "  \"run\": null\n",
       "}\n",
       "\u001B[32;1m\u001B[1;3m[chain/start]\u001B[0m \u001B[1m[1:chain:RunnableSequence > 4:parser:StrOutputParser] Entering Parser run with input:\n",
       "\u001B[0m[inputs]\n",
-      "\u001B[36;1m\u001B[1;3m[chain/end]\u001B[0m \u001B[1m[1:chain:RunnableSequence > 4:parser:StrOutputParser] [0ms] Exiting Parser run with output:\n",
+      "\u001B[36;1m\u001B[1;3m[chain/end]\u001B[0m \u001B[1m[1:chain:RunnableSequence > 4:parser:StrOutputParser] [1ms] Exiting Parser run with output:\n",
       "\u001B[0m{\n",
-      "  \"output\": \"The result of 1 plus 1 is 2.\"\n",
+      "  \"output\": \"```python\\nprint(2 + 2)\\n```\"\n",
       "}\n",
-      "\u001B[32;1m\u001B[1;3m[tool/start]\u001B[0m \u001B[1m[1:chain:RunnableSequence > 5:tool:Python_REPL] Entering Tool run with input:\n",
-      "\u001B[0m\"The result of 1 plus 1 is 2.\"\n",
-      "\u001B[36;1m\u001B[1;3m[tool/end]\u001B[0m \u001B[1m[1:chain:RunnableSequence > 5:tool:Python_REPL] [0ms] Exiting Tool run with output:\n",
-      "\u001B[0m\"SyntaxError('invalid syntax', ('<string>', 1, 5, 'The result of 1 plus 1 is 2.\\n', 1, 11))\"\n",
-      "\u001B[36;1m\u001B[1;3m[chain/end]\u001B[0m \u001B[1m[1:chain:RunnableSequence] [1.04s] Exiting Chain run with output:\n",
+      "\u001B[32;1m\u001B[1;3m[chain/start]\u001B[0m \u001B[1m[1:chain:RunnableSequence > 5:chain:_sanitize_output] Entering Chain run with input:\n",
       "\u001B[0m{\n",
-      "  \"output\": \"SyntaxError('invalid syntax', ('<string>', 1, 5, 'The result of 1 plus 1 is 2.\\\\n', 1, 11))\"\n",
+      "  \"input\": \"```python\\nprint(2 + 2)\\n```\"\n",
       "}\n",
-      "Spent a total of 32 tokens\n",
-      "\n",
-      "SyntaxError('invalid syntax', ('<string>', 1, 5, 'The result of 1 plus 1 is 2.\\n', 1, 11))\n"
+      "\u001B[36;1m\u001B[1;3m[chain/end]\u001B[0m \u001B[1m[1:chain:RunnableSequence > 5:chain:_sanitize_output] [2ms] Exiting Chain run with output:\n",
+      "\u001B[0m{\n",
+      "  \"output\": \"\\nprint(2 + 2)\\n\"\n",
+      "}\n",
+      "\u001B[32;1m\u001B[1;3m[chain/start]\u001B[0m \u001B[1m[1:chain:RunnableSequence > 6:chain:run] Entering Chain run with input:\n",
+      "\u001B[0m{\n",
+      "  \"input\": \"\\nprint(2 + 2)\\n\"\n",
+      "}\n",
+      "\u001B[36;1m\u001B[1;3m[chain/end]\u001B[0m \u001B[1m[1:chain:RunnableSequence > 6:chain:run] [2ms] Exiting Chain run with output:\n",
+      "\u001B[0m{\n",
+      "  \"output\": \"4\\n\"\n",
+      "}\n",
+      "\u001B[36;1m\u001B[1;3m[chain/end]\u001B[0m \u001B[1m[1:chain:RunnableSequence] [41.93s] Exiting Chain run with output:\n",
+      "\u001B[0m{\n",
+      "  \"output\": \"4\\n\"\n",
+      "}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "'4\\n'"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain_core.output_parsers import StrOutputParser\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_openai import ChatOpenAI\n",
-    "from langchain.callbacks import get_openai_callback\n",
-    "from langchain_experimental.tools import PythonREPLTool\n",
+    "chain = prompt | llm | StrOutputParser() | _sanitize_output | PythonREPL().run\n",
     "\n",
-    "prompt = ChatPromptTemplate.from_template(\"tell me a result about {query}\")\n",
-    "model = ChatOpenAI(model=\"gpt-3.5-turbo\", temperature=0)\n",
-    "output_parser = StrOutputParser()\n",
-    "\n",
-    "python_repl = PythonREPLTool() \n",
-    "\n",
-    "chain = prompt | model | output_parser | python_repl\n",
-    "\n",
-    "print(\n",
-    "    chain_invoke_tokens(chain, {\"query\": \"What is 1 plus 1?\"})\n",
-    ")"
+    "chain.invoke({\"input\": \"whats 2 plus 2\"})"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T09:01:36.692768900Z",
-     "start_time": "2024-01-27T09:01:35.620682700Z"
+     "end_time": "2024-03-08T08:52:25.658679309Z",
+     "start_time": "2024-03-08T08:51:43.661845955Z"
     }
    },
-   "id": "883c2fcbd024dfb1"
+   "id": "eeea68cdb49b1093"
   }
  ],
  "metadata": {
