--- a/notebook/01_langchain_prompt_templates.ipynb
+++ b/notebook/01_langchain_prompt_templates.ipynb
@@ -261,11 +261,57 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "我们尝试使用 openai 模型来构建使用 prompt 模版输出内容"
+   ],
    "metadata": {
     "collapsed": false
    },
    "id": "3a614488c2456f2a"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "配置 openai key"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3b3aa5208fc547a3"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "%env OPENAI_API_KEY=you-api-key"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6736285537cc0f51"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "如果无法访问 openai api，可以配置 base url"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b9867ced417305f5"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "%env OPENAI_API_BASE=you-base-url"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "faec59d889f3684e"
   },
   {
    "cell_type": "code",
@@ -286,8 +332,6 @@
     "from langchain_openai import ChatOpenAI\n",
     "\n",
     "import os\n",
-    "from dotenv import load_dotenv, find_dotenv\n",
-    "load_dotenv(find_dotenv('.env'))\n",
     "\n",
     "prompt = ChatPromptTemplate.from_template(\"tell me a short joke about {topic}\")\n",
     "model = ChatOpenAI(model=\"gpt-3.5-turbo\", openai_api_key=os.getenv(\"OPENAI_API_KEY\"), openai_api_base=os.getenv(\"OPENAI_API_BASE\"))\n",
