--- a/notebook/04_langchain_summarization.ipynb
+++ b/notebook/04_langchain_summarization.ipynb
@@ -63,13 +63,13 @@
     }
    ],
    "source": [
-    "%env GOOGLE_API_KEY=AIzaSyAfpe3G_tTSVl0WpSuaX0_bHry3tkrjydQ"
+    "%env GOOGLE_API_KEY=you-api-key"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-08T06:45:07.389879902Z",
-     "start_time": "2024-03-08T06:45:07.368157785Z"
+     "end_time": "2024-03-09T02:09:00.892191200Z",
+     "start_time": "2024-03-09T02:09:00.859833400Z"
     }
    },
    "id": "8971dba1ce8e6402"
@@ -97,13 +97,13 @@
     }
    ],
    "source": [
-    "%env GOOGLE_API_ENDPOINT=ai.goi.oowan.net"
+    "%env GOOGLE_API_ENDPOINT=you-api-endpoint"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-08T06:45:09.718128895Z",
-     "start_time": "2024-03-08T06:45:09.688818132Z"
+     "end_time": "2024-03-09T02:09:02.998572300Z",
+     "start_time": "2024-03-09T02:09:02.968005500Z"
     }
    },
    "id": "daa85be72e44a852"
@@ -131,8 +131,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-08T06:45:12.880955709Z",
-     "start_time": "2024-03-08T06:45:12.240330605Z"
+     "end_time": "2024-03-09T02:09:07.324649900Z",
+     "start_time": "2024-03-09T02:09:06.006886900Z"
     }
    },
    "id": "86ede4c24d113ec2"
@@ -150,7 +150,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "使用 WebBaseLoader 可以加载一个网页内容"
+    "使用 WebBaseLoader 可以加载一个网页内容，以下抓取的是百科上的一篇文章"
    ],
    "metadata": {
     "collapsed": false
@@ -159,13 +159,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tang Hongbo, a Chinese astronaut, was selected for the second batch of Chinese astronauts in 2010. He was part of the Shenzhou XII mission in 2021, becoming the first astronaut to return to the Chinese space station. In 2023, he was appointed commander of the Shenzhou XVII mission, making him the astronaut with the shortest interval between space missions and the longest cumulative time in space (215 days as of February 26, 2024). Tang's journey from a rural student to an astronaut highlights his hard work, dedication, and the support of his family and colleagues.\n"
+      "Generative AI (AIGC) is a transformative technology that enables the creation of content through AI algorithms. It involves training models on vast datasets to generate new content that mimics human-generated work. AIGC has applications in text, image, audio, and video generation.\n",
+      "\n",
+      "The AIGC industry structure consists of:\n",
+      "- Foundation models\n",
+      "- Industry/scenario models\n",
+      "- Business/domain models\n",
+      "- AI infrastructure\n",
+      "- AIGC support services\n",
+      "\n",
+      "Key capabilities for AIGC include data, computing power, and algorithms. It has commercial applications in marketing, digital office, customer service, HR, and basic operations.\n",
+      "\n",
+      "AIGC can be implemented through direct use, prompts, LoRA, fine-tuning, or training. Its business models include MaaS+IaaS, MaaS+PaaS, and MaaS+SaaS.\n",
+      "\n",
+      "Challenges in AIGC development include:\n",
+      "- Incomplete legal frameworks\n",
+      "- Data element issues\n",
+      "- Technical confidentiality concerns\n",
+      "\n",
+      "To address these challenges, measures such as legal access, data service industry chain management, and technical standard unification are recommended. AIGC has significant social implications and was named one of the top ten technology buzzwords in 2023.\n"
      ]
     }
    ],
@@ -174,7 +192,7 @@
     "from langchain_community.document_loaders import WebBaseLoader\n",
     "\n",
     "# 加载页面\n",
-    "loader = WebBaseLoader(\"https://baike.baidu.com/item/%E6%B1%A4%E6%B4%AA%E6%B3%A2/57276112\")\n",
+    "loader = WebBaseLoader(\"https://baike.baidu.com/item/AIGC/59988381\")\n",
     "\n",
     "docs = loader.load()\n",
     "\n",
@@ -189,8 +207,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-08T08:24:22.118247549Z",
-     "start_time": "2024-03-08T08:24:12.684616734Z"
+     "end_time": "2024-03-09T02:09:26.351847600Z",
+     "start_time": "2024-03-09T02:09:10.599475500Z"
     }
    },
    "id": "8fa3afcac68b971b"
@@ -198,7 +216,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "由于模型本身默认使用英文，所以运行后可以看到总结的内容是英文的，我们可以通过使用 prompt 模型的方式来改变输出为中文的，具体可参考下一个小节"
+    "由于模型本身默认使用英文，所以运行后可以看到总结的内容是英文的，我们可以通过使用 prompt 模版的方式来改变输出为中文的，具体可参考下一个小节"
    ],
    "metadata": {
     "collapsed": false
@@ -240,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -290,8 +308,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-08T08:23:16.885357238Z",
-     "start_time": "2024-03-08T08:23:01.718813674Z"
+     "end_time": "2024-03-09T02:16:37.900328Z",
+     "start_time": "2024-03-09T02:16:18.308608800Z"
     }
    },
    "id": "cac1cc170c023e20"
