--- a/notebook/04_langchain_summarization.ipynb
+++ b/notebook/04_langchain_summarization.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -68,8 +68,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T02:09:00.892191200Z",
-     "start_time": "2024-03-09T02:09:00.859833400Z"
+     "end_time": "2024-03-10T13:22:14.515742400Z",
+     "start_time": "2024-03-10T13:22:14.487339700Z"
     }
    },
    "id": "8971dba1ce8e6402"
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -102,8 +102,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T02:09:02.998572300Z",
-     "start_time": "2024-03-09T02:09:02.968005500Z"
+     "end_time": "2024-03-10T13:22:16.678791100Z",
+     "start_time": "2024-03-10T13:22:16.659406300Z"
     }
    },
    "id": "daa85be72e44a852"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "import os\n",
@@ -131,8 +131,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T02:09:07.324649900Z",
-     "start_time": "2024-03-09T02:09:06.006886900Z"
+     "end_time": "2024-03-10T13:35:02.861477700Z",
+     "start_time": "2024-03-10T13:35:02.827100900Z"
     }
    },
    "id": "86ede4c24d113ec2"
@@ -140,7 +140,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 提供网页的方式"
+    "### 提供网页的方式"
    ],
    "metadata": {
     "collapsed": false
@@ -226,7 +226,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 提供 PDF 的方式"
+    "### 提供 PDF 的方式"
    ],
    "metadata": {
     "collapsed": false
@@ -313,6 +313,266 @@
     }
    },
    "id": "cac1cc170c023e20"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 链类型 refine map-reduce stuff "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "84ce74a05c5bce20"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "我们以总结同一篇网页文档为例，对比一下它们之间的差别"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2ce67761b8d3229a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [],
+   "source": [
+    "from langchain_community.document_loaders import WebBaseLoader\n",
+    "from langchain.chains.summarize import load_summarize_chain\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "# 加载页面\n",
+    "loader = WebBaseLoader(\"https://lilianweng.github.io/posts/2023-03-15-prompt-engineering/\")\n",
+    "\n",
+    "docs = loader.load()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-10T13:52:41.655118200Z",
+     "start_time": "2024-03-10T13:52:40.496795100Z"
+    }
+   },
+   "id": "6772d6cb25c618d2"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**stuff** 一次行将所有内容输入给大模型"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2cb1dca5716f6fd3"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- 优点：只调用大模型一次，上下文信息完整\n",
+    "- 缺点：只适用于文本较短的场景，一般大模型都有 token 数据最长文本的限制，所以对于长文本不太适应这种模式"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5c4abd2355751ab3"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Retrying langchain_google_genai.llms._completion_with_retry.<locals>._completion_with_retry in 4.0 seconds as it raised InternalServerError: 500 POST https://ai.goi.oowan.net/v1beta/models/gemini-pro:generateContent?%24alt=json%3Benum-encoding%3Dint: An internal error has occurred. Please retry or report in https://developers.generativeai.google/guide/troubleshooting.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "提示工程，又称上下文提示，是指与 LLM 沟通以引导其行为以获得所需结果的方法，而无需更新模型权重。它是一门经验科学，提示工程方法的效果在不同模型之间差异很大，因此需要大量的实验和启发式方法。\n",
+      "本文仅关注自回归语言模型的提示工程，因此不涉及完形填空测试、图像生成或多模态模型。提示工程的核心目标是关于对齐和模型可操纵性。查看我之前关于可控文本生成的文章。\n",
+      "[我个人的辛辣观点]在我看来，一些提示工程论文不值得写 8 页长，因为这些技巧可以用一两句话解释，剩下的都是基准测试。易于使用和共享的基准基础设施对社区更有益。迭代提示或外部工具的使用并不容易设置。社区也不容易统一采用它。\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 定义 prompt\n",
+    "prompt_template = \"\"\"Write a concise summary of the following:\n",
+    "\n",
+    "{text}\n",
+    "\n",
+    "Concise summary in Chinese:\"\"\"\n",
+    "prompt = PromptTemplate(template=prompt_template, input_variables=[\"text\"])\n",
+    "\n",
+    "chain = load_summarize_chain(llm, chain_type=\"stuff\", prompt=prompt)\n",
+    "\n",
+    "res = chain.invoke(docs, return_only_outputs=True)\n",
+    "\n",
+    "print(\n",
+    "    res[\"output_text\"]\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-10T13:32:04.117717100Z",
+     "start_time": "2024-03-10T13:31:47.780632200Z"
+    }
+   },
+   "id": "6b54be51fb6fa41"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**map_reduce** 先将长文档分成一下小块，然后将每个小块调用大模型生成总结，最后再将分块生成的总结合并，生成基于全文的总结"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "72716e3334503dec"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- 优先：可以处理很长的文本\n",
+    "- 缺点：单次任务需要调用多次大模型，在文本合并的过程中可能有信息的丢失，不如 stuff 模型有完整的上下文信息"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "86b9eae814dcc816"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "提示工程是一种通过与 LLM 沟通来引导其行为以获得所需结果的方法。它是一门经验科学，需要大量的实验和启发式方法。提示工程的核心目标是关于对齐和模型可操纵性。\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 定义 prompt\n",
+    "prompt_template = \"\"\"Write a concise summary of the following:\n",
+    "\n",
+    "{text}\n",
+    "\n",
+    "Concise summary in Chinese:\"\"\"\n",
+    "prompt = PromptTemplate(template=prompt_template, input_variables=[\"text\"])\n",
+    "\n",
+    "chain = load_summarize_chain(\n",
+    "    llm=llm, \n",
+    "    chain_type=\"map_reduce\", \n",
+    "    map_prompt=prompt,\n",
+    "    combine_prompt=prompt,\n",
+    "    input_key=\"input_documents\",\n",
+    "    output_key=\"output_text\",\n",
+    ")\n",
+    "\n",
+    "res = chain.invoke({\"input_documents\": docs}, return_only_outputs=True)\n",
+    "\n",
+    "print(\n",
+    "    res[\"output_text\"]\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-10T14:22:44.319916400Z",
+     "start_time": "2024-03-10T14:22:32.175441100Z"
+    }
+   },
+   "id": "d750357277aa7c4d"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**refine** 将长文本分成某些块，然后将第1个文本块生成总结，并且将总结内容和第2个文本块合并，依次类推最终生成整篇文章的文本总结"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2e9d88700c56b356"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- 优先：这种合并方式比 map_reduce 要少丢失一些信息\n",
+    "- 缺点：需要调用大模型多次，而且对文本顺序有要求，每一个片段的总结需要依赖上一个片段的结果，因此每个片段生成总结的过程没法并行。任务整体变成了串行流程"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fceb3229030c91b3"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "提示工程，又称上下文提示，是指与 LLM 沟通以引导其行为以获得所需结果的方法，而无需更新模型权重。它是一门经验科学，提示工程方法的效果在不同模型之间差异很大，因此需要大量的实验和启发式方法。\n",
+      "本文仅关注自回归语言模型的提示工程，因此不涉及完形填空测试、图像生成或多模态模型。提示工程的核心目标是关于对齐和模型可操纵性。查看我之前关于可控文本生成的文章。\n",
+      "[我个人的辛辣观点]在我看来，一些提示工程论文不值得写 8 页长，因为这些技巧可以用一两句话解释，剩下的都是基准测试。易于使用和共享的基准基础设施对社区更有益。迭代提示或外部工具的使用并不容易设置。社区也不容易统一采用它。\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 定义 prompt\n",
+    "prompt_template = \"\"\"Write a concise summary of the following:\n",
+    "\n",
+    "{text}\n",
+    "\n",
+    "Concise summary in Chinese:\"\"\"\n",
+    "prompt = PromptTemplate.from_template(prompt_template)\n",
+    "\n",
+    "# 定义 refine prompt\n",
+    "refine_template = (\n",
+    "    \"Your job is to produce a final summary\\n\"\n",
+    "    \"We have provided an existing summary up to a certain point: {existing_answer}\\n\"\n",
+    "    \"We have the opportunity to refine the existing summary\"\n",
+    "    \"(only if needed) with some more context below.\\n\"\n",
+    "    \"------------\\n\"\n",
+    "    \"{text}\\n\"\n",
+    "    \"------------\\n\"\n",
+    "    \"Given the new context, refine the original summary in Chinese\"\n",
+    "    \"If the context isn't useful, return the original summary.\"\n",
+    ")\n",
+    "refine_prompt = PromptTemplate.from_template(refine_template)\n",
+    "\n",
+    "chain = load_summarize_chain(\n",
+    "    llm=llm,\n",
+    "    chain_type=\"refine\",\n",
+    "    question_prompt=prompt,\n",
+    "    refine_prompt=refine_prompt,\n",
+    "    return_intermediate_steps=True,\n",
+    "    input_key=\"input_documents\",\n",
+    "    output_key=\"output_text\",\n",
+    ")\n",
+    "\n",
+    "res = chain.invoke({\"input_documents\": docs}, return_only_outputs=True)\n",
+    "\n",
+    "print(\n",
+    "    res[\"output_text\"]\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-10T14:09:49.202243100Z",
+     "start_time": "2024-03-10T14:09:42.296073800Z"
+    }
+   },
+   "id": "e62c36df1adc4062"
   }
  ],
  "metadata": {
