--- a/notebook/03_langchain_llms.ipynb
+++ b/notebook/03_langchain_llms.ipynb
@@ -37,8 +37,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-07T01:38:07.354365900Z",
-     "start_time": "2024-03-07T01:38:07.334878900Z"
+     "end_time": "2024-03-18T15:28:33.194832500Z",
+     "start_time": "2024-03-18T15:28:33.176309500Z"
     }
    },
    "outputs": [
@@ -46,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "env: GOOGLE_API_KEY=AIzaSyAfpe3G_tTSVl0WpSuaX0_bHry3tkrjydQ\n"
+      "env: GOOGLE_API_KEY=you-api-key\n"
      ]
     }
    ],
@@ -71,8 +71,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-07T01:38:09.413004Z",
-     "start_time": "2024-03-07T01:38:09.393638700Z"
+     "end_time": "2024-03-18T15:28:35.376664200Z",
+     "start_time": "2024-03-18T15:28:35.361655500Z"
     }
    },
    "outputs": [
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "env: GOOGLE_API_ENDPOINT=ai.goi.oowan.net\n"
+      "env: GOOGLE_API_ENDPOINT=you-api-endpoint\n"
      ]
     }
    ],
@@ -106,7 +106,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AIzaSyAfpe3G_tTSVl0WpSuaX0_bHry3tkrjydQ\n"
+      "you-api-key\n"
      ]
     }
    ],
@@ -120,8 +120,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-07T01:40:34.808493300Z",
-     "start_time": "2024-03-07T01:40:34.792593600Z"
+     "end_time": "2024-03-18T15:28:39.442689500Z",
+     "start_time": "2024-03-18T15:28:39.427041400Z"
     }
    },
    "id": "a3fa462a1793c91"
